--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Karla);
 * {
     margin: 0;
     padding: 0;
@@ -24,7 +25,7 @@ h1 {
 body {
     background-color: #ecf0f1;
     text-align: center;
-    font-family: sans-serif;
+    font-family: Karla, sans-serif;
     color: #333;
     font-weight: 100;
 }
@@ -32,25 +33,24 @@ hr {
     margin: 0 auto;
     border: none;
     background-color: #bdc3c7;
-    height: 1px;
-    width: 400px;
+    height: 2px;
+    width: 200px;
 }
 p {
-    padding-top: 10px;
+    padding: 10px 0 25px 0;
 }
 a {
     text-decoration: none;
     color: #333;
-    padding: 50px;
-    padding-bottom: 20px;
-    margin-top: 20px;
-    font-weight: 300;
+    transition: color .5s;
 }
 a:hover {
+    transition: color .5s;
     color: #95a5a6;
 }
 li {
-    display: inline;
+    padding: 10px 0 10px 0;
+    display: block;
 }
 img {
     width: 200px;
